feature werkt basic, nog wat dingen afhandelen

--- a/src/main/resources/templates/pages/employee-dashboard.html
+++ b/src/main/resources/templates/pages/employee-dashboard.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -10,6 +11,15 @@
 
     <h2>Hier komt de naam van de medewerker</h2>
     <h2>En de functie</h2>
+
+    <table class="table table-bordered m-15">
+        <thead class="thead-light">
+        <tr>
+            <td th:text="${employee.firstName}"></td>
+        </tr>
+        </thead>
+    </table>
+
 
 </body>
 </html>
