--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -29,8 +29,9 @@
                         <input type="submit" class="btn btn-primary" value="Inloggen">
                     </div>
                 </form>
-                <div class="col-md-4 mx-lg-0"> <br/>
-                    <a th:href="@{/}">Ga terug naar home</a>
+                <div class="col-md-4 mx-lg-8">
+                    <a th:href="@{/}">Ga terug naar home</a><br>
+                    <a th:href="@{/loginemployee}">Inloggen als medewerker</a>
                 </div>
             </div>
         </div>
