--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -12,14 +12,14 @@
     <hr>
     <h2> Fijn dat u een rekening bij ons wilt openen.</h2>
     <h3>  Bevestig uw gegevens en vraag direct aan.</h3>
-    <form action="#" th:action="@{/saveAccount}" th:object="${account}" method="post">
+    <form action="/openaccount" th:object="${customer}" method="post">
 
         <!-- Add hidden form field to handle update-->
-        <input type="hidden" th:field="*{customerId}"/>
+        <input type="text" th:field="*{customerID}"class="form-control mb-4 col-4">
         <label>Naam</label>
-        <input type="text" th:field="*{name}"  class="form-control mb-4 col-4">
+        <input type="text" th:field="*{userName}"  class="form-control mb-4 col-4">
         <label>Uw nieuwe rekeningnummer (IBAN)</label>
-        <input type="text" th:field="*{IBAN}" class="form-control mb-4 col-4">
+        <input type="text" class="form-control mb-4 col-4">
         <div class="checkbox">
             <label><input type="checkbox" value=""> Ik ga akkoord met de voorwaarden</label>
         </div>
