CustomerID meegeven aan open-account.html

--- a/src/main/resources/templates/pages/account-overview.html
+++ b/src/main/resources/templates/pages/account-overview.html
@@ -35,6 +35,6 @@
         </tbody>
     </table>
 
-    <p>Nog geen rekening? <a th:href="@{/openaccount/{id}(id=${customer.id})}">Open deze hier!</a></p>
+    <p>Nog geen rekening? <a th:href="@{openaccount/{id}(id=${customer.customerID})}">Open deze hier!</a></p>
 </body>
 </html>
