--- a/src/main/resources/templates/pages/account_details.html
+++ b/src/main/resources/templates/pages/account_details.html
@@ -36,6 +36,6 @@
     </tbody>
 </table>
 
-<p>Nog geen rekening? <a href="/openaccount">Open deze hier!</a></p>
+<p>Nog geen rekening? <a th:href="@{openaccount/{id}(id=${customer.customerID})}">Open deze hier!</a></p>
 </body>
 </html>
