alvast rol toegevoegd aan employee-dashboard.html

--- a/src/main/resources/templates/pages/employee-dashboard.html
+++ b/src/main/resources/templates/pages/employee-dashboard.html
@@ -16,9 +16,9 @@
         <thead class="thead-light">
         <tr>
             <td th:text="${employee.firstName}"></td>
+            <td th:text="${employee.employeeRole}"></td>
         </tr>
         </thead>
     </table>
-
 </body>
 </html>
