--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
+<html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Rekening openen</title>
@@ -7,25 +7,59 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
+
+
+
+
 <div class="container">
     <h1> Bankrekening openen</h1>
     <hr>
     <h2> Fijn dat u een rekening bij ons wilt openen.</h2>
-    <h3> Bevestig uw gegevens en vraag direct aan.</h3>
+    <h3> U kunt direct uw nieuwe rekening bevestigen.</h3>
+
     <form action="/saveaccount" method="post">
-        <table>
-            <input type="hidden" th:field="*{id}"/>
-
-            <input type="text" th:field="*{account.iban}" name="iban" placeholder="Iban" class="form-control"/>
-
-            <input type="text" th:field="*{account.balance}" class="form-control" placeholder="balance" name="balance"/>
-
-            <input type="checkbox" value="submit"> Ik ga akkoord met de voorwaarden/>
-
-            <button type="submit" value="Bevestig"></button>
-
-        </table>
+        <!--input type="hidden" th:field="${id}"/!-->
+        <div class="form-group">
+            <label for="name">Rekeninghouder</label>
+            <input type="text" th:field="${customer.initials}" id="name" name="name" placeholder="Rekeninghouder"
+                   class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label for="iban">Uw nieuwe rekening nummer:</label>
+            <p id="ibanGenerator"></p>
+            <input type="text" id="iban" name="iban" placeholder="IBAN"
+                   class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label for="balance">Uw huidige saldo:</label>
+            <input type="text" th:field="*{account.balance}" id="balance" class="form-control" placeholder="Saldo"
+                   name="balance" readonly/>
+        </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" name="remember" required> Ik ga akkoord met de
+                voorwaarden
+                <div class="valid-feedback">Valid.</div>
+                <div class="invalid-feedback">Graag aanvinken als u door zou willen gaan</div>
+            </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Bevestig</button>
     </form>
 </div>
 </body>
+<script>
+document.getElementById("ibanGenerator").innerHTML =random(9);
+
+   function random(length){
+    var random_string = "DROVN";
+    var characters = "0123456789";
+    for(var i, i=0; i < length; i++){
+    random_string += characters.charAt(Math.floor(Math.random() * characters.length));
+    }
+    return random_string;
+    }
+
+
+</script>
+
 </html>
